# glib

./: .travis.yml  Cargo.toml  Gir.toml  Gir_GObject.toml  appveyor.yml  build.rs
clone_tests/: clone_compilation_errors.py
glib-macros/: Cargo.toml
glib-macros/src/: downgrade_enum.rs  downgrade_fields.rs  downgrade_struct.rs  gboxed_derive.rs  genum_derive.rs  gflags_attribute.rs  lib.rs
glib-macros/tests/: test.rs
hooks/: pre-commit
src/: array.rs  binding.rs  boxed.rs  clone.rs  closure.rs  enums.rs  functions.rs  lib.rs  main_context.rs  object.rs  param_spec.rs  prelude.rs  ptr_array.rs  quark.rs  rec_mutex.rs  signal.rs  source.rs  time_val.rs  translate.rs  types.rs  value.rs  variant.rs  wrapper.rs
src/auto/: date_time.rs  enums.rs  flags.rs  functions.rs  key_file.rs  main_context.rs  mod.rs  option_group.rs  versions.txt
src/gobject/: flags.rs  mod.rs
src/gobject/auto/: binding.rs  flags.rs  mod.rs
src/subclass/: boxed.rs  interface.rs  mod.rs  object.rs  types.rs
tests/: clone.rs
