[package]
name = "glib"
version = "0.0.6"
authors = ["The Gtk-rs Project Developers"]

description = "Rust bindings for the GLib library"
repository = "https://github.com/gtk-rs/glib"
license = "MIT"
readme = "README.md"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/glib/"

keywords = ["glib", "gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "glib"

[dependencies]
gio-sys = "0.2.1"
glib-sys = "0.2.1"
gobject-sys = "0.2.1"
libc = "0.1"
